WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71043
[GTK] Fix leak when fullscreening a video
https://bugs.webkit.org/show_bug.cgi?id=71043
Summary
[GTK] Fix leak when fullscreening a video
Jonathon Jongsma (jonner)
Reported
2011-10-27 11:38:40 PDT
Created
attachment 112717
[details]
leak fix patch When fullscreening a video, the dynamic pad name string is leaked. patch attached to plug the leak.
Attachments
leak fix patch
(3.75 KB, patch)
2011-10-27 11:38 PDT
,
Jonathon Jongsma (jonner)
no flags
Details
Formatted Diff
Diff
[GStreamer] Prevent memory leak when fullscreening a video https://bugs.webkit.org/show_bug.cgi?id=71043
(4.06 KB, patch)
2011-10-27 12:11 PDT
,
Jonathon Jongsma (jonner)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2011-10-27 11:45:03 PDT
Attachment 112717
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/gstreamer/GStreamerGWorld.h:28: Alphabetical sorting problem. [build/include_order] [4] Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jonathon Jongsma (jonner)
Comment 2
2011-10-27 12:11:10 PDT
Created
attachment 112725
[details]
[GStreamer] Prevent memory leak when fullscreening a video
https://bugs.webkit.org/show_bug.cgi?id=71043
Reviewed by NOBODY (OOPS!). * platform/graphics/gstreamer/GStreamerGWorld.cpp: (WebCore::GStreamerGWorld::GStreamerGWorld): (WebCore::GStreamerGWorld::enterFullscreen): (WebCore::GStreamerGWorld::exitFullscreen): * platform/graphics/gstreamer/GStreamerGWorld.h:
Gustavo Noronha (kov)
Comment 3
2011-10-27 12:25:41 PDT
Comment on
attachment 112725
[details]
[GStreamer] Prevent memory leak when fullscreening a video
https://bugs.webkit.org/show_bug.cgi?id=71043
LGTM!
WebKit Review Bot
Comment 4
2011-10-27 16:06:40 PDT
Comment on
attachment 112725
[details]
[GStreamer] Prevent memory leak when fullscreening a video
https://bugs.webkit.org/show_bug.cgi?id=71043
Clearing flags on attachment: 112725 Committed
r98654
: <
http://trac.webkit.org/changeset/98654
>
WebKit Review Bot
Comment 5
2011-10-27 16:06:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug