[GStreamer] Prevent memory leak when fullscreening a video https://bugs.webkit.org/show_bug.cgi?id=71043

Patch by Jonathon Jongsma <jonathon.jongsma@collabora.co.uk> on 2011-10-27
Reviewed by Gustavo Noronha Silva.

* platform/graphics/gstreamer/GStreamerGWorld.cpp:
(WebCore::GStreamerGWorld::GStreamerGWorld):
(WebCore::GStreamerGWorld::enterFullscreen):
(WebCore::GStreamerGWorld::exitFullscreen):
* platform/graphics/gstreamer/GStreamerGWorld.h:

Canonical link: https://commits.webkit.org/87280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98654 268f45cc-cd09-0410-ab3c-d52691b4dbfc